# airflow-postgres-csv

./: .gitignore  README.md  operators.py  pyproject.toml  test_operators.py
.github/workflows/: lint.yml  publish.yml  test.yml
src/airflow_postgres_csv/: __init__.py  operators.py
tests/: test_operators.py
